--- a/heatmap/heatmap/heatmap.csproj
+++ b/heatmap/heatmap/heatmap.csproj
@@ -55,6 +55,12 @@
     <Compile Include="OsuUtils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RangeBar.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="RangeBar.Designer.cs">
+      <DependentUpon>RangeBar.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -67,6 +73,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="RangeBar.resx">
+      <DependentUpon>RangeBar.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
